--- a/image-gallery.html
+++ b/image-gallery.html
@@ -11,7 +11,7 @@
             var img = document.getElementById("selected-image");
             img.src = src;
             document.getElementById("container").style.display="block";
-            document.getElementById("desc").innerHTML = descriptions[src.charAt(30)-1];
+            document.getElementById("desc").innerHTML = descriptions[(src.charAt(53) + (src.charAt(54) == '.' ? '' : src.charAt(54)))-1];
         }
         
         function load() {
@@ -22,7 +22,6 @@
             var src = document.createAttribute("src");
             src.value = path + imgs[i];
             image.setAttributeNode(src);
-            //image.maxHeight = 50px;
             image.onclick = function() {
                 setSource(this.src);
             }
@@ -35,8 +34,8 @@
     <body>
         <div id="navbar">
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a class ="active" href="/projects.html">Projects</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a class ="active" href="projects.html">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -47,6 +46,15 @@
         <div id ="container" class="hidden">
             <img src="#" id="selected-image">
             <p id="desc"></p>
+        </div>
+        <div id = "footer">
+            <p>Hello World</p>
+        </div>
+        <div class = "title">
+            <br>
+            <h1>
+                Ghanna
+            </h1>
         </div>
     </body>
 </html>
