added text and included other folders

--- a/Ghanna.html
+++ b/Ghanna.html
@@ -43,18 +43,24 @@
             <ul>
             </ul>
         </div>
+        <div class = "article">
+            <div class = "title">
+                <h1>Ghanna</h1>
+            </div>
+            <p>In the summer of 2016 I came together with 6 other students at Edinburgh to organise, fund raise and construct a sustainable income generating chicken farm for a charitable school in Akim Swedru, Ghana. The work was arranged by CAYDNET in Ghana and by us at EGP (Edinburgh Global Partnerships) is Edinburgh.  EGP is student cooperative society, the money was fundraised by us only for the project itself, and all organisation was done by the seven of us.</p>
+            <p> 
+            We worked alongside builders doing manual labour and construction. With them created a schedule and the project was completed on time and within the budget we had set. We also travelled independently all over the country, visiting cities and small communities on the weekend</p>
+        </div>
         <div id ="container" class="hidden">
-            <img src="#" id="selected-image">
-            <p id="desc"></p>
+            <div class="imageHolder">
+                <img src="#" id="selected-image">
+            </div>
+            <div class = "textHolder">
+                <p id="desc"></p>
+            </div>
         </div>
         <div id = "footer">
             <p>Hello World</p>
-        </div>
-        <div class = "title">
-            <br>
-            <h1>
-                Ghanna
-            </h1>
         </div>
     </body>
 </html>
