--- a/projects.html
+++ b/projects.html
@@ -68,16 +68,14 @@
             <ul>
                 <li>
                     <div class = "movingImage">
-                    <div class = "name"><h>Link1</h>
-                    </div>
-                    <a href="image-gallery.html">
+                    <a href="Ghanna.html">
                     <img src="images/sketch1.jpg" alt="Buildings">
                     </a>
                 </div>
                 </li>
                 <li>
                    <div class = "movingImage">
-                    <a href="image-gallery.html">
+                    <a href="Ghanna.html">
                     <img src="images/buildings.jpg" alt="Buildings">
                     </a>
                 </div>
